# miao

./: .gitignore  Cargo.toml  README.md  build.sh  config.ts  config.yaml  config.yaml.example  db.ts  index.ts  miao.ts  miao.yaml  net-check.ts  package.json  push.sh  release.sh  singboxconfig.ts
.github/workflows/: build-release.yml
bun/: db.ts  index.ts  miao.yaml  package.json  rule.ts  template-config.ts  types.ts
bun/panel/: Config.tsx  Control.tsx  Rule.tsx  types.ts
embedded/: .gitkeep  geosite-geolocation-cn.srs
embedded/assets/: bootstrap-icons.css
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  styles.css  utils.js  utils.test.js
frontend/src/components/: ConnectivityCard.jsx  ConnectivityCard.test.jsx  NodesCard.jsx  OnboardingScreen.jsx  ProxyCard.jsx  ProxyCard.test.jsx  StatusCard.jsx  SubsCard.jsx  (+5 more)
panel/: App.tsx  Checks.tsx  Config.tsx  Control.tsx  Node.tsx  index.html  index.tsx  types.ts
public/: index.html
scripts/: build-embedded.sh  build-frontend.sh  compile-direct-rules.mjs
src/: error.rs  main.rs  responses.rs  router.rs  state.rs  test_support.rs  validation.rs
src/handlers/: mod.rs  nodes.rs  proxy.rs  service.rs  static_assets.rs  subs.rs  version.rs
src/models/: api.rs  config.rs  mod.rs  node.rs  proxy.rs  version.rs
src/services/: config.rs  mod.rs  node_parser.rs  openwrt.rs  proxy.rs  singbox.rs  subscription.rs  version.rs  vps.rs
web/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  types.ts
(+11 files in other folders)
