[package]
name = "miao-rust"
version = "0.6.21"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tower = "0.5"
tower-http = "0.5"
lazy_static = "1.4"
nix = { version = "0.29", features = ["signal"] }
